RESOLVED FIXED194211
DFG's doesGC() is incorrect about the SameValue node's behavior.
https://bugs.webkit.org/show_bug.cgi?id=194211
Summary DFG's doesGC() is incorrect about the SameValue node's behavior.
Mark Lam
Reported 2019-02-03 20:57:14 PST
Attachments
proposed patch. (1.61 KB, patch)
2019-02-03 21:02 PST, Mark Lam
saam: review+
Mark Lam
Comment 1 2019-02-03 21:02:53 PST
Created attachment 361037 [details] proposed patch.
Mark Lam
Comment 2 2019-02-04 00:16:49 PST
Thanks for the review. Landed in r240917: <http://trac.webkit.org/r240917>.
Note You need to log in before you can comment on or make changes to this bug.